--- a/server/package.json
+++ b/server/package.json
@@ -3,9 +3,13 @@
   "version": "1.0.0",
   "description": "Backend API for Pristine Education Platform",
   "main": "server.js",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "seed": "node seed/seedData.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
