Configure frontend and API URLs for Render deployment

--- a/render.yaml
+++ b/render.yaml
@@ -16,7 +16,7 @@ services:
       - key: JWT_SECRET
         sync: false
       - key: FRONTEND_URL
-        sync: false
+        value: https://pristine1.onrender.com
       - key: EMAIL_HOST
         value: smtp.gmail.com
       - key: EMAIL_PORT
@@ -50,7 +50,7 @@ services:
     staticPublishPath: build
     envVars:
       - key: REACT_APP_API_URL
-        sync: false
+        value: https://pristine-3k5c.onrender.com/api
     routes:
       - type: rewrite
         source: /*
